tests/rascal/negative/name_errors/L1/7_undecl-id.ob
MODULE Bla;

VAR
  x: INTEGER;

BEGIN
  x := y
END Bla.